# herdr-kiosk

./: .gitattributes  Cargo.toml  README.md  herdr-plugin.toml  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: PLAN.md  VERIFYING.md  herdr-plugin-research.md
docs/internal/: backlog.md  herdr-driven-mru-plan.md
examples/: update-readme.rs
scripts/: e2e-helpers.sh  e2e.sh  fetch-or-build.ps1  fetch-or-build.sh  install-rehearsal.sh  open-picker.ps1  open-picker.sh  run-picker.ps1  test-fetch-or-build.ps1  test-fetch-or-build.sh
scripts/gif/: build_cast.py  record.sh
src/: app.rs  context.rs  display.rs  event.rs  folder_bindings.rs  herdr.rs  keyboard.rs  keymap.rs  lib.rs  main.rs  path.rs  pending_delete.rs  pins.rs  recency.rs  setup.rs  spawn.rs  state.rs  state_store.rs  theme.rs
src/components/: branch_picker.rs  dialog.rs  error_toast.rs  help.rs  list_row.rs  mod.rs  new_branch.rs  repo_list.rs  search_bar.rs  setup.rs
src/config/: keys.rs  mod.rs
src/git/: cli.rs  mock.rs  mod.rs  provider.rs  repo.rs
src/herdr/: mock.rs
src/screens/: branch.rs  delete.rs  mod.rs  new_branch.rs  repo.rs
src/screens/branch/: tests.rs
src/screens/delete/: tests.rs
src/screens/new_branch/: tests.rs
src/screens/repo/: tests.rs
tests/: startup.rs
xtask/: Cargo.toml
xtask/src/: main.rs  readme.rs
