[package]
name = "herdr-kiosk"
version = "0.1.0"
edition = "2024"
description = "Fuzzy repo and branch picker for Herdr"
license = "MIT"

[dependencies]
anyhow = "1"
crossterm = "0.29"
fuzzy-matcher = "0.3"
ratatui = "0.30"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_ignored = "0.1"
serde_json = "1"
toml = "0.9"
unicode-segmentation = "1"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"

[workspace]
resolver = "3"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[lints]
workspace = true

[profile.release]
lto = true
